# axio

./: .gitignore  Cargo.toml  README.md  build.rs  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  docs.yml
axio/: all.html  enum.Error.html  enum.SeekFrom.html  fn.default_read_to_end.html  index.html  sidebar-items.js  struct.BufReader.html  struct.PollState.html  trait.BufRead.html  trait.Read.html  trait.Seek.html  trait.Write.html  type.Result.html
axio/prelude/: index.html
search.desc/axio/: axio-desc-0-.js
search.index/: 0dc7cce7a6c1.js  0dcfb081daf3.js  168528483a6f.js  28f761b84b7f.js  36c2e780cbee.js  385fb5113615.js  48216668945d.js  66777e2295fb.js  66bfe30f9dca.js  73580672cff7.js  7f290355cbd2.js  root.js
search.index/crateNames/: 6e0197f233cf.js
search.index/desc/: 01124d6b4ef5.js
search.index/entry/: f4ac583f2a31.js
search.index/function/: f3adbeafa6f3.js
search.index/generic_inverted_index/: 7e28e6efebac.js
search.index/name/: adbc5f104ff4.js
search.index/normalizedName/: f2d1ff24943e.js
search.index/path/: 5d152d7d3238.js
search.index/type/: ded19882689d.js
src/: buf.rs  error.rs  impls.rs  lib.rs  prelude.rs
src/axio/: error.rs.html  impls.rs.html  lib.rs.html  prelude.rs.html
src/buffered/: bufreader.rs  mod.rs  reader.rs
src/iobuf/: impls.rs  mod.rs
src/read/: bufread.rs  mod.rs
src/utils/: chain.rs  copy.rs  cursor.rs  empty.rs  mod.rs  repeat.rs  sink.rs  take.rs
src/write/: mod.rs
tests/: buffered.rs  copy.rs  cursor.rs  io.rs  iobuf.rs  utils.rs
(+25 files in other folders)
