[package]
name = "axio"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "`std::io`-like I/O traits for `no_std` environment"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/axio"
documentation = "https://arceos-org.github.io/axio"

[features]
alloc = []
default = []

[dependencies]
axerrno = { git = "https://github.com/arceos-org/axerrno.git", tag = "v0.1.0" }
